--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "browser": "browser-sync start -s -w"
   },
   "repository": {
     "type": "git",
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/igaryok/js-list-todo/issues"
   },
-  "homepage": "https://github.com/igaryok/js-list-todo#readme"
+  "homepage": "https://github.com/igaryok/js-list-todo#readme",
+  "devDependencies": {
+    "browser-sync": "^2.26.7"
+  }
 }
